--- a/config_orari.json
+++ b/config_orari.json
@@ -5,7 +5,8 @@
     "pomeriggio": { "inizio": 15, "fine": 19.10 }
   },
   "preavviso_minimo_giorni": 3,
-  "limite_massimo_giorni": 30,
+  "limite_massimo_giorni": 60,
   "limite_disdetta_giorni":1,
-  "slot_orari_minuti": 30
+  "slot_orari_minuti": 30,
+  "slot_prenotazioni": 30
 }
