--- a/config_orari.json
+++ b/config_orari.json
@@ -1,8 +1,8 @@
 {
   "giorni_attivi": [1, 2, 3, 4, 5], 
   "orari": {
-    "mattina": { "inizio": 9, "fine": 13.10 },
-    "pomeriggio": { "inizio": 15, "fine": 19.10 }
+    "mattina": { "inizio": 8, "fine": 13.55 },
+    "pomeriggio": { "inizio": 14, "fine": 18.10 }
   },
   "turni": {
     "mattina": { "inizio": 8.5, "fine": 13.5 },
@@ -10,8 +10,11 @@
   },
   "slot_turni": 60,
   "preavviso_turno": 5,
+  "giorni_assegnazione": 7,
+  "tempo_arrivo_obiettivo_min": 15,
+  "distanza_obiettivo_min":15,
 
-  "preavviso_minimo_giorni": 3,
+  "preavviso_minimo_giorni": 2,
   "limite_massimo_giorni": 60,
   "limite_disdetta_giorni":1,
   "slot_orari_minuti": 30,
